--- a/src/app/components/home/home.scss
+++ b/src/app/components/home/home.scss
@@ -22,6 +22,10 @@
         width: calc(100% - 450px);
         padding: 5px;
     }
+
+    &-languages {
+        padding-top: 5px;
+    }
 }
 
 .icon {
